# acadrust

./: .git-cmd.md  .gitignore  Cargo.toml  PERFORMANCE_REPORT.md  README.md  help.md
.github/workflows/: ci.yml
examples/: dae_to_dwg.rs  debug_lwpoly.rs  debug_raw_records.rs  diag_ac21.rs  diag_dict_entries.rs  diag_entmode.rs  diag_handles.rs  diag_owner.rs  dxf2json.rs  dxf2mvt.rs  fbx_to_dwg.rs  gen_all_entities_all_versions.rs  gen_all_versions_rt.rs  gltf_to_dwg.rs  obj_to_dwg.rs  roundtrip_general.rs  serde_json.rs  stl_to_dwg.rs  test_r14_roundtrip.rs  test_read_all_dwg.rs  test_roundtrip.rs  tmp_sab_bytecheck.rs  viewport_layouts.rs  write_3dsolid_dwg.rs  write_3dsolid_dxf.rs
src/: document.rs  error.rs  fields.rs  lib.rs  notification.rs
src/classes/: mod.rs
src/entities/: arc.rs  attribute_definition.rs  attribute_entity.rs  block.rs  circle.rs  dimension.rs  ellipse.rs  explode.rs  face3d.rs  hatch.rs  helix.rs  insert.rs  leader.rs  light.rs  line.rs  lwpolyline.rs  mesh.rs  mirror.rs  mline.rs  mod.rs  mtext.rs  multileader.rs  ole2frame.rs  ole_presentation.rs  point.rs  polyface_mesh.rs  polygon_mesh.rs  polyline.rs  polyline3d.rs  raster_image.rs  ray.rs  section_symbol.rs  seqend.rs  shape.rs  solid.rs  solid3d.rs  spline.rs  surface.rs  table.rs  text.rs  (+9 more)
src/entities/acis/: primitives.rs  sab.rs  types.rs  writer.rs
src/entities/mtext_format/: mod.rs  parser.rs  types.rs
src/io/: mod.rs
src/io/dwg/: decompressor_ac18.rs  dwg_document_builder.rs  dwg_reader.rs  dwg_writer.rs  eed_codec.rs  mod.rs  preview.rs
src/io/dwg/dwg_stream_readers/: bit_reader.rs  classes_reader.rs  header_reader.rs  merged_reader.rs
src/io/dwg/dwg_stream_readers/object_reader/: common.rs  entities.rs  mod.rs  objects.rs  tables.rs
src/io/dwg/dwg_stream_writers/: aux_header_writer.rs  bit_writer.rs  header_writer.rs  mod.rs
src/io/dwg/dwg_stream_writers/object_writer/: common.rs  entities.rs  mod.rs  objects.rs
src/io/dwg/file_headers/: file_header_ac15.rs  file_header_ac18.rs  file_header_ac21.rs
src/io/dxf/: code_page.rs  dxf_code.rs  reader.rs
src/io/dxf/reader/: binary_reader.rs  section_reader.rs  stream_reader.rs  text_reader.rs
src/io/dxf/writer/: mod.rs  section_writer.rs  text_writer.rs
src/io/import/: color_mapping.rs  fbx.rs  mod.rs  obj.rs
src/io/import/collada/: mod.rs  parser.rs
src/io/import/gltf/: json_parser.rs  mod.rs
src/io/import/stl/: ascii.rs  binary.rs  mod.rs
src/mvt/: clipper.rs  encoder.rs  mod.rs  tile.rs  vector_tile.proto
src/objects/: dgn_linestyle.rs  mod.rs  multileader_style.rs  object_context_data.rs  stub_objects.rs  table_style.rs
src/tables/: block_record.rs  dimstyle.rs  layer.rs  textstyle.rs  view.rs  vport.rs
src/types/: bounds.rs  line_weight.rs  transparency.rs
tests/: dimension_dxf_roundtrip.rs  helix_roundtrip.rs  import_collada.rs  import_stl.rs  roundtrip.rs  table_dwg_read.rs  table_dwg_roundtrip.rs  table_dxf_roundtrip.rs  underlay_roundtrip.rs  xref_block_roundtrip.rs
tests/roundtrip/: samplekitchen_simple_rt_AC1021.dwl  samplekitchen_simple_rt_AC1021.dwl2
